[package]
name = "pallet-author-reward-dest"
version = "0.1.0"
description = "pallet for setting author reward destination."
homepage = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
primitives-author-reward-dest = { workspace = true }

[dev-dependencies]
sp-io = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[features]
default = ["std"]
std = [
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-std/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"primitives-author-reward-dest/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
